--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         localStorage.setItem("usuarioLogado", username);
 
         if (username === "benedito") {
-          window.location.href = "paineladmin.html";
+          window.location.href = "admin.html";
         } else {
           window.location.href = "usuario.html";
         }
