--- a/admin.html
+++ b/admin.html
@@ -64,6 +64,7 @@
     <button onclick="location.href='cadastro_vendedores.html'">Cadastro de Vendedores</button>
     <button onclick="location.href='caixa.html'">Caixa</button>
     <button onclick="location.href='despesas.html'">Despesas</button>
+   <button onclick="location.href='receitas.html'">Receitas</button>
     <button onclick="location.href='relatorio.html'">Relatório</button>
     <button onclick="location.href='backup.html'">Backup</button>
     <button onclick="location.href='resetar.html'">Resetar Sistema</button>
