--- a/caixa.html
+++ b/caixa.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -41,6 +40,7 @@
   <hr>
 
   <div class="totais">
+    SALDO ANTERIOR: <span id="saldoAnterior">R$ 0,00</span> <br>
     TOTAL APURADO: <span id="totalApurado">R$ 0,00</span> <br>
     TOTAL DESPESAS: <span id="totalDespesas">R$ 0,00</span> <br>
     TOTAL FINAL: <span id="totalFinal">R$ 0,00</span>
@@ -74,10 +74,138 @@
   <script>
     const { jsPDF } = window.jspdf;
 
-    // Exibir relógio
     function atualizarRelogio() {
       const agora = new Date();
       const hora = agora.toLocaleTimeString();
+      const data = agora.toLocaleDateString();
+      document.getElementById('relogio').textContent = `${data} ${hora}`;
+    }
+    setInterval(atualizarRelogio, 1000);
+    atualizarRelogio();
+
+    document.getElementById("usuarioLogado").textContent = localStorage.getItem("usuarioLogado") || "Desconhecido";
+
+    let vendedores = JSON.parse(localStorage.getItem("vendedores") || "[]");
+    let vendas = JSON.parse(localStorage.getItem("vendas") || "{}");
+    let blocos = JSON.parse(localStorage.getItem("blocos") || "{}");
+    let despesas = JSON.parse(localStorage.getItem("despesas") || "[]");
+    let receitas = JSON.parse(localStorage.getItem("receitas") || "[]");
+
+    const tbody = document.querySelector("#tabelaCaixa tbody");
+
+    let totalApurado = 0;
+    let totalPagou = 0;
+    let saldoAnterior = receitas.reduce((soma, r) => soma + parseFloat(r.valor || 0), 0);
+
+    function atualizarTabela() {
+      tbody.innerHTML = "";
+      totalApurado = 0;
+      totalPagou = 0;
+
+      vendedores.forEach(v => {
+        const listaVendas = vendas[v.nome] || [];
+        listaVendas.forEach(venda => {
+          const vendeu = venda.recebeu - venda.devolveu;
+          const apurou = vendeu * v.cotacao;
+          const pagou = venda.pagou || 0;
+          const deve = apurou - pagou;
+          totalApurado += apurou;
+          totalPagou += pagou;
+
+          const tr = document.createElement("tr");
+          tr.innerHTML = `
+            <td>${v.nome}</td>
+            <td>${venda.data}</td>
+            <td>${vendeu}</td>
+            <td>R$ ${apurou.toFixed(2)}</td>
+            <td>R$ ${pagou.toFixed(2)}</td>
+            <td>R$ ${deve.toFixed(2)}</td>
+            <td><input type="text" value="${blocos[v.nome] || ''}" onchange="salvarBloco('${v.nome}', this.value)"/></td>
+            <td><button onclick="editarBlocoPrompt('${v.nome}')">Editar</button></td>
+          `;
+          tbody.appendChild(tr);
+        });
+      });
+
+      const totalDespesas = despesas.reduce((soma, d) => soma + parseFloat(d.valor || 0), 0);
+      const totalFinal = saldoAnterior + totalApurado - totalDespesas;
+
+      document.getElementById("saldoAnterior").textContent = `R$ ${saldoAnterior.toFixed(2)}`;
+      document.getElementById("totalApurado").textContent = `R$ ${totalApurado.toFixed(2)}`;
+      document.getElementById("totalDespesas").textContent = `R$ ${totalDespesas.toFixed(2)}`;
+      document.getElementById("totalFinal").textContent = `R$ ${totalFinal.toFixed(2)}`;
+    }
+
+    atualizarTabela();
+
+    function salvarBloco(nome, valor) {
+      blocos[nome] = valor;
+      localStorage.setItem("blocos", JSON.stringify(blocos));
+    }
+
+    function editarBlocoPrompt(nome) {
+      const novoValor = prompt("Informe o número do bloco para " + nome + ":", blocos[nome] || "");
+      if (novoValor !== null) {
+        salvarBloco(nome, novoValor);
+        atualizarTabela();
+      }
+    }
+
+    function exportarPDF() {
+      const doc = new jsPDF();
+      doc.setFontSize(12);
+      doc.text("MOVIMENTO CAIXA", 80, 10);
+      doc.text(`Usuário: ${localStorage.getItem("usuarioLogado") || ""}`, 10, 20);
+      doc.text(`Data: ${new Date().toLocaleDateString()} ${new Date().toLocaleTimeString()}`, 10, 30);
+      doc.text(`SALDO ANTERIOR: R$ ${saldoAnterior.toFixed(2)}`, 10, 38);
+      doc.text(`TOTAL APURADO: R$ ${totalApurado.toFixed(2)}`, 10, 45);
+      doc.text(`TOTAL DESPESAS: R$ ${despesas.reduce((soma, d) => soma + parseFloat(d.valor || 0), 0).toFixed(2)}`, 10, 52);
+      doc.text(`TOTAL FINAL: R$ ${(saldoAnterior + totalApurado - despesas.reduce((soma, d) => soma + parseFloat(d.valor || 0), 0)).toFixed(2)}`, 10, 59);
+
+      const headers = [["Nome", "Data", "Vendeu", "Apurou", "Pagou", "Deve", "Bloco"]];
+      const rows = [];
+
+      vendedores.forEach(v => {
+        const listaVendas = vendas[v.nome] || [];
+        listaVendas.forEach(venda => {
+          const vendeu = venda.recebeu - venda.devolveu;
+          const apurou = vendeu * v.cotacao;
+          const pagou = venda.pagou || 0;
+          const deve = apurou - pagou;
+          rows.push([
+            v.nome,
+            venda.data,
+            vendeu,
+            `R$ ${apurou.toFixed(2)}`,
+            `R$ ${pagou.toFixed(2)}`,
+            `R$ ${deve.toFixed(2)}`,
+            blocos[v.nome] || ""
+          ]);
+        });
+      });
+
+      doc.autoTable({
+        startY: 70,
+        head: headers,
+        body: rows
+      });
+
+      doc.save("movimento_caixa.pdf");
+    }
+
+    function zerarCaixa() {
+      if (confirm("Deseja realmente zerar o caixa? Isso apagará todas as vendas e despesas.")) {
+        localStorage.removeItem("vendas");
+        localStorage.removeItem("despesas");
+        vendas = {};
+        despesas = [];
+        atualizarTabela();
+        alert("Caixa zerado com sucesso.");
+      }
+    }
+  </script>
+</body>
+  </html>      const hora = agora.toLocaleTimeString();
       const data = agora.toLocaleDateString();
       document.getElementById('relogio').textContent = `${data} ${hora}`;
     }
