--- a/relatorio.html
+++ b/relatorio.html
@@ -1,50 +1,47 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Relatório</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background: #f9f9f9; }
-    .header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px; }
-    .clock { font-weight: bold; }
-    h2, h3 { text-align: center; margin-top: 20px; }
-    table { width: 100%; border-collapse: collapse; margin-top: 10px; background: white; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
-    th { background: #eee; }
-    hr { margin: 20px 0; }
-    button {
-      display: block;
-      margin: 30px auto;
-      padding: 10px 20px;
-      background-color: #2196f3;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
     }
-    button:hover { background-color: #0b7dda; }
-    .totais { text-align: center; font-weight: bold; margin-top: 15px; }
+    h1, h2 {
+      text-align: center;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 5px;
+      text-align: center;
+    }
+    .totais {
+      margin-top: 20px;
+      font-weight: bold;
+    }
+    button {
+      margin-top: 20px;
+      padding: 10px 20px;
+    }
   </style>
 </head>
 <body>
-
-  <div class="header">
-    <div>Usuário logado: <strong id="usuarioLogado">---</strong></div>
-    <div class="clock" id="relogio"></div>
-  </div>
-
-  <hr>
-  <h2>RELATÓRIO DE VENDAS</h2>
-  <hr>
-
-  <table id="tabelaVendas">
+  <div id="usuarioLogado"></div>
+  <div id="hora"></div>
+  <h1>RELATÓRIO DE VENDAS</h1>
+  <table id="tabelaRelatorio">
     <thead>
       <tr>
-        <th>Nome</th>
-        <th>Bloco</th>
         <th>Data</th>
+        <th>Vendedor</th>
         <th>Recebeu</th>
         <th>Devolveu</th>
         <th>Vendeu</th>
@@ -57,173 +54,148 @@
   </table>
 
   <div class="totais">
-    TOTAL APURADO: <span id="totalApurado">R$ 0,00</span>
+    SALDO ANTERIOR: <span id="totalReceitas">R$ 0,00</span><br>
+    TOTAL DESPESAS: <span id="totalDespesas">R$ 0,00</span><br>
+    TOTAL VENDAS (APUROU): <span id="totalApurado">R$ 0,00</span><br>
+    TOTAL FINAL: <span id="totalFinal">R$ 0,00</span>
   </div>
 
-  <hr>
-  <h3>RELATÓRIO DE DESPESAS</h3>
-  <hr>
-
+  <h2>RELATÓRIO DE DESPESAS</h2>
   <table id="tabelaDespesas">
     <thead>
       <tr>
-        <th>Data</th>
-        <th>Valor</th>
         <th>Descrição</th>
+        <th>Valor</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
 
-  <div class="totais">
-    TOTAL DAS DESPESAS: <span id="totalDespesas">R$ 0,00</span>
-  </div>
-
-  <hr>
-  <div class="totais">
-    TOTAL DAS RECEITAS: <span id="totalReceitas">R$ 0,00</span><br>
-    TOTAL DAS DESPESAS: <span id="totalGastos">R$ 0,00</span><br>
-    TOTAL FINAL: <span id="totalFinal">R$ 0,00</span>
-  </div>
-
-  <button onclick="exportarPDF()">Exportar Relatório em PDF</button>
-
-  <!-- jsPDF + AutoTable -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
+  <button onclick="exportarPDF()">Exportar PDF</button>
 
   <script>
-    const { jsPDF } = window.jspdf;
+    const usuario = localStorage.getItem("usuarioLogado");
+    document.getElementById("usuarioLogado").innerHTML = "Usuário: " + usuario;
 
-    document.getElementById("usuarioLogado").textContent = localStorage.getItem("usuarioLogado") || "Desconhecido";
-
-    function atualizarRelogio() {
+    function atualizarHora() {
       const agora = new Date();
-      document.getElementById('relogio').textContent = agora.toLocaleDateString() + ' ' + agora.toLocaleTimeString();
+      const dataHora = agora.toLocaleString("pt-BR");
+      document.getElementById("hora").innerHTML = "Data/Hora: " + dataHora;
     }
-    setInterval(atualizarRelogio, 1000);
-    atualizarRelogio();
+    setInterval(atualizarHora, 1000);
+    atualizarHora();
 
     const vendedores = JSON.parse(localStorage.getItem("vendedores") || "[]");
-    const vendas = JSON.parse(localStorage.getItem("vendas") || "{}");
     const despesas = JSON.parse(localStorage.getItem("despesas") || "[]");
-    const blocos = JSON.parse(localStorage.getItem("blocos") || "{}");
+    const receitas = JSON.parse(localStorage.getItem("receitas") || "[]");
 
-    const tbodyVendas = document.querySelector("#tabelaVendas tbody");
+    let totalReceitas = receitas.reduce((soma, r) => soma + parseFloat(r.valor || 0), 0);
+    let totalDespesas = despesas.reduce((soma, d) => soma + parseFloat(d.valor || 0), 0);
     let totalApurado = 0;
 
-    vendedores.forEach(v => {
-      const listaVendas = vendas[v.nome] || [];
-      const bloco = blocos[v.nome] || "—";
-      listaVendas.forEach(venda => {
-        const vendeu = venda.recebeu - venda.devolveu;
-        const apurou = vendeu * v.cotacao;
-        const pagou = venda.pagou || 0;
-        const deve = apurou - pagou;
-        totalApurado += apurou;
+    const tbody = document.querySelector("#tabelaRelatorio tbody");
 
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
+    vendedores.forEach(v => {
+      const historico = JSON.parse(localStorage.getItem(`historico_${v.nome}`) || "[]");
+
+      historico.forEach(item => {
+        const linha = document.createElement("tr");
+
+        linha.innerHTML = `
+          <td>${item.data}</td>
           <td>${v.nome}</td>
-          <td>${bloco}</td>
-          <td>${venda.data}</td>
-          <td>${venda.recebeu}</td>
-          <td>${venda.devolveu}</td>
-          <td>${vendeu}</td>
-          <td>R$ ${apurou.toFixed(2)}</td>
-          <td>R$ ${pagou.toFixed(2)}</td>
-          <td>R$ ${deve.toFixed(2)}</td>
+          <td>${item.recebeu}</td>
+          <td>${item.devolveu}</td>
+          <td>${item.vendeu}</td>
+          <td>R$ ${parseFloat(item.apurou).toFixed(2)}</td>
+          <td>R$ ${parseFloat(item.pagou).toFixed(2)}</td>
+          <td>R$ ${parseFloat(item.deve).toFixed(2)}</td>
         `;
-        tbodyVendas.appendChild(tr);
+
+        tbody.appendChild(linha);
+        totalApurado += parseFloat(item.apurou);
       });
     });
 
+    document.getElementById("totalReceitas").textContent = `R$ ${totalReceitas.toFixed(2)}`;
     document.getElementById("totalApurado").textContent = `R$ ${totalApurado.toFixed(2)}`;
-    document.getElementById("totalReceitas").textContent = `R$ ${totalApurado.toFixed(2)}`;
+    document.getElementById("totalDespesas").textContent = `R$ ${totalDespesas.toFixed(2)}`;
+    document.getElementById("totalFinal").textContent = `R$ ${(totalReceitas + totalApurado - totalDespesas).toFixed(2)}`;
 
     const tbodyDespesas = document.querySelector("#tabelaDespesas tbody");
-    let totalDespesas = 0;
-
     despesas.forEach(d => {
-      const valor = parseFloat(d.valor || 0);
-      totalDespesas += valor;
-      const tr = document.createElement("tr");
-      tr.innerHTML = `
-        <td>${d.data}</td>
-        <td>R$ ${valor.toFixed(2)}</td>
+      const linha = document.createElement("tr");
+      linha.innerHTML = `
         <td>${d.descricao}</td>
+        <td>R$ ${parseFloat(d.valor).toFixed(2)}</td>
       `;
-      tbodyDespesas.appendChild(tr);
+      tbodyDespesas.appendChild(linha);
     });
 
-    document.getElementById("totalDespesas").textContent = `R$ ${totalDespesas.toFixed(2)}`;
-    document.getElementById("totalGastos").textContent = `R$ ${totalDespesas.toFixed(2)}`;
-    document.getElementById("totalFinal").textContent = `R$ ${(totalApurado - totalDespesas).toFixed(2)}`;
-
     function exportarPDF() {
+      const { jsPDF } = window.jspdf;
       const doc = new jsPDF();
-      doc.setFontSize(12);
-      doc.text("RELATÓRIO DE VENDAS", 75, 10);
-      doc.text(`Usuário: ${localStorage.getItem("usuarioLogado") || ""}`, 10, 20);
-      doc.text(`Data: ${new Date().toLocaleString()}`, 10, 30);
+      doc.setFontSize(14);
+      doc.text("RELATÓRIO DE VENDAS", 70, 10);
 
-      const vendasData = [];
+      let y = 20;
+      doc.setFontSize(10);
+      doc.text("Data", 10, y);
+      doc.text("Vendedor", 35, y);
+      doc.text("Recebeu", 75, y);
+      doc.text("Devolveu", 100, y);
+      doc.text("Vendeu", 125, y);
+      doc.text("Apurou", 150, y);
+      doc.text("Pagou", 170, y);
+      doc.text("Deve", 190, y);
+      y += 5;
+
       vendedores.forEach(v => {
-        const listaVendas = vendas[v.nome] || [];
-        const bloco = blocos[v.nome] || "—";
-        listaVendas.forEach(venda => {
-          const vendeu = venda.recebeu - venda.devolveu;
-          const apurou = vendeu * v.cotacao;
-          const pagou = venda.pagou || 0;
-          const deve = apurou - pagou;
-          vendasData.push([
-            v.nome,
-            bloco,
-            venda.data,
-            venda.recebeu,
-            venda.devolveu,
-            vendeu,
-            `R$ ${apurou.toFixed(2)}`,
-            `R$ ${pagou.toFixed(2)}`,
-            `R$ ${deve.toFixed(2)}`
-          ]);
+        const historico = JSON.parse(localStorage.getItem(`historico_${v.nome}`) || "[]");
+        historico.forEach(item => {
+          doc.text(item.data, 10, y);
+          doc.text(v.nome, 35, y);
+          doc.text(item.recebeu.toString(), 75, y);
+          doc.text(item.devolveu.toString(), 100, y);
+          doc.text(item.vendeu.toString(), 125, y);
+          doc.text(`R$ ${parseFloat(item.apurou).toFixed(2)}`, 150, y);
+          doc.text(`R$ ${parseFloat(item.pagou).toFixed(2)}`, 170, y);
+          doc.text(`R$ ${parseFloat(item.deve).toFixed(2)}`, 190, y);
+          y += 5;
+          if (y > 270) {
+            doc.addPage();
+            y = 20;
+          }
         });
       });
 
-      doc.autoTable({
-        head: [["Nome", "Bloco", "Data", "Recebeu", "Devolveu", "Vendeu", "Apurou", "Pagou", "Deve"]],
-        body: vendasData,
-        startY: 40
-      });
-
-      let y = doc.lastAutoTable.finalY + 10;
-      doc.text(`TOTAL APURADO: R$ ${totalApurado.toFixed(2)}`, 10, y);
+      y += 10;
+      doc.text(`SALDO ANTERIOR: R$ ${totalReceitas.toFixed(2)}`, 10, y);
+      y += 6;
+      doc.text(`TOTAL DESPESAS: R$ ${totalDespesas.toFixed(2)}`, 10, y);
+      y += 6;
+      doc.text(`TOTAL VENDAS (APUROU): R$ ${totalApurado.toFixed(2)}`, 10, y);
+      y += 6;
+      doc.text(`TOTAL FINAL: R$ ${(totalReceitas + totalApurado - totalDespesas).toFixed(2)}`, 10, y);
       y += 10;
 
-      doc.text("RELATÓRIO DE DESPESAS", 75, y);
+      doc.text("RELATÓRIO DE DESPESAS", 70, y);
       y += 10;
-
-      const despesasData = despesas.map(d => [
-        d.data,
-        `R$ ${parseFloat(d.valor || 0).toFixed(2)}`,
-        d.descricao
-      ]);
-
-      doc.autoTable({
-        head: [["Data", "Valor", "Descrição"]],
-        body: despesasData,
-        startY: y
+      doc.text("Descrição", 10, y);
+      doc.text("Valor", 120, y);
+      y += 5;
+      despesas.forEach(d => {
+        doc.text(d.descricao, 10, y);
+        doc.text(`R$ ${parseFloat(d.valor).toFixed(2)}`, 120, y);
+        y += 5;
+        if (y > 280) {
+          doc.addPage();
+          y = 20;
+        }
       });
 
-      y = doc.lastAutoTable.finalY + 10;
-      doc.text(`TOTAL DAS RECEITAS: R$ ${totalApurado.toFixed(2)}`, 10, y);
-      y += 7;
-      doc.text(`TOTAL DAS DESPESAS: R$ ${totalDespesas.toFixed(2)}`, 10, y);
-      y += 7;
-      doc.text(`TOTAL FINAL: R$ ${(totalApurado - totalDespesas).toFixed(2)}`, 10, y);
-
-      doc.save("relatorio_completo.pdf");
+      doc.save("relatorio.pdf");
     }
   </script>
 </body>
-</html>
+  </html>
