--- a/relatorio.html
+++ b/relatorio.html
@@ -1,49 +1,28 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Relatório</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
-    h1, h2 {
-      text-align: center;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 5px;
-      text-align: center;
-    }
-    .totais {
-      margin-top: 20px;
-      font-weight: bold;
-    }
-    button {
-      margin-top: 20px;
-      padding: 10px 20px;
-    }
+    body { font-family: Arial, sans-serif; padding: 20px; background: #f2f2f2; }
+    h1 { text-align: center; }
+    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+    th, td { border: 1px solid #999; padding: 8px; text-align: center; }
+    th { background-color: #eee; }
+    .totais { margin-top: 30px; font-weight: bold; }
+    button { margin-top: 20px; padding: 10px 20px; }
   </style>
 </head>
 <body>
-  <div id="usuarioLogado"></div>
-  <div id="hora"></div>
   <h1>RELATÓRIO DE VENDAS</h1>
-  <table id="tabelaRelatorio">
+
+  <table id="tabelaVendas">
     <thead>
       <tr>
         <th>Data</th>
         <th>Vendedor</th>
-        <th>Recebeu</th>
-        <th>Devolveu</th>
         <th>Vendeu</th>
         <th>Apurou</th>
         <th>Pagou</th>
@@ -54,13 +33,13 @@
   </table>
 
   <div class="totais">
-    SALDO ANTERIOR: <span id="totalReceitas">R$ 0,00</span><br>
-    TOTAL DESPESAS: <span id="totalDespesas">R$ 0,00</span><br>
-    TOTAL VENDAS (APUROU): <span id="totalApurado">R$ 0,00</span><br>
+    TOTAL DAS RECEITAS (SALDO ANTERIOR): <span id="totalReceitas">R$ 0,00</span><br>
+    TOTAL DAS DESPESAS: <span id="totalDespesas">R$ 0,00</span><br>
     TOTAL FINAL: <span id="totalFinal">R$ 0,00</span>
   </div>
 
-  <h2>RELATÓRIO DE DESPESAS</h2>
+  <h1>RELATÓRIO DE DESPESAS</h1>
+
   <table id="tabelaDespesas">
     <thead>
       <tr>
@@ -71,131 +50,94 @@
     <tbody></tbody>
   </table>
 
-  <button onclick="exportarPDF()">Exportar PDF</button>
+  <button onclick="exportarPDF()">Exportar para PDF</button>
 
   <script>
-    const usuario = localStorage.getItem("usuarioLogado");
-    document.getElementById("usuarioLogado").innerHTML = "Usuário: " + usuario;
-
-    function atualizarHora() {
-      const agora = new Date();
-      const dataHora = agora.toLocaleString("pt-BR");
-      document.getElementById("hora").innerHTML = "Data/Hora: " + dataHora;
-    }
-    setInterval(atualizarHora, 1000);
-    atualizarHora();
-
-    const vendedores = JSON.parse(localStorage.getItem("vendedores") || "[]");
+    const vendas = JSON.parse(localStorage.getItem("vendas") || "[]");
     const despesas = JSON.parse(localStorage.getItem("despesas") || "[]");
     const receitas = JSON.parse(localStorage.getItem("receitas") || "[]");
 
-    let totalReceitas = receitas.reduce((soma, r) => soma + parseFloat(r.valor || 0), 0);
-    let totalDespesas = despesas.reduce((soma, d) => soma + parseFloat(d.valor || 0), 0);
     let totalApurado = 0;
+    let totalDespesas = 0;
+    let totalReceitas = receitas.reduce((soma, r) => soma + parseFloat(r.valor || 0), 0);
 
-    const tbody = document.querySelector("#tabelaRelatorio tbody");
+    const tbodyVendas = document.querySelector("#tabelaVendas tbody");
 
-    vendedores.forEach(v => {
-      const historico = JSON.parse(localStorage.getItem(`historico_${v.nome}`) || "[]");
-
-      historico.forEach(item => {
-        const linha = document.createElement("tr");
-
-        linha.innerHTML = `
-          <td>${item.data}</td>
-          <td>${v.nome}</td>
-          <td>${item.recebeu}</td>
-          <td>${item.devolveu}</td>
-          <td>${item.vendeu}</td>
-          <td>R$ ${parseFloat(item.apurou).toFixed(2)}</td>
-          <td>R$ ${parseFloat(item.pagou).toFixed(2)}</td>
-          <td>R$ ${parseFloat(item.deve).toFixed(2)}</td>
-        `;
-
-        tbody.appendChild(linha);
-        totalApurado += parseFloat(item.apurou);
-      });
+    vendas.forEach(v => {
+      const tr = document.createElement("tr");
+      tr.innerHTML = `
+        <td>${v.data || ""}</td>
+        <td>${v.vendedor || ""}</td>
+        <td>${parseFloat(v.vendeu || 0)}</td>
+        <td>${parseFloat(v.apurou || 0).toFixed(2)}</td>
+        <td>${parseFloat(v.pagou || 0).toFixed(2)}</td>
+        <td>${parseFloat(v.deve || 0).toFixed(2)}</td>
+      `;
+      tbodyVendas.appendChild(tr);
+      totalApurado += parseFloat(v.apurou || 0);
     });
 
-    document.getElementById("totalReceitas").textContent = `R$ ${totalReceitas.toFixed(2)}`;
-    document.getElementById("totalApurado").textContent = `R$ ${totalApurado.toFixed(2)}`;
-    document.getElementById("totalDespesas").textContent = `R$ ${totalDespesas.toFixed(2)}`;
-    document.getElementById("totalFinal").textContent = `R$ ${(totalReceitas + totalApurado - totalDespesas).toFixed(2)}`;
-
     const tbodyDespesas = document.querySelector("#tabelaDespesas tbody");
+
     despesas.forEach(d => {
-      const linha = document.createElement("tr");
-      linha.innerHTML = `
+      const tr = document.createElement("tr");
+      tr.innerHTML = `
         <td>${d.descricao}</td>
         <td>R$ ${parseFloat(d.valor).toFixed(2)}</td>
       `;
-      tbodyDespesas.appendChild(linha);
+      tbodyDespesas.appendChild(tr);
+      totalDespesas += parseFloat(d.valor || 0);
     });
+
+    document.getElementById("totalReceitas").textContent = `R$ ${totalReceitas.toFixed(2)}`;
+    document.getElementById("totalDespesas").textContent = `R$ ${totalDespesas.toFixed(2)}`;
+    document.getElementById("totalFinal").textContent = `R$ ${(totalReceitas + totalApurado - totalDespesas).toFixed(2)}`;
 
     function exportarPDF() {
       const { jsPDF } = window.jspdf;
       const doc = new jsPDF();
+
       doc.setFontSize(14);
-      doc.text("RELATÓRIO DE VENDAS", 70, 10);
+      doc.text("RELATÓRIO DE VENDAS", 10, 10);
 
       let y = 20;
       doc.setFontSize(10);
-      doc.text("Data", 10, y);
-      doc.text("Vendedor", 35, y);
-      doc.text("Recebeu", 75, y);
-      doc.text("Devolveu", 100, y);
-      doc.text("Vendeu", 125, y);
-      doc.text("Apurou", 150, y);
-      doc.text("Pagou", 170, y);
-      doc.text("Deve", 190, y);
-      y += 5;
+      doc.text("Data | Vendedor | Vendeu | Apurou | Pagou | Deve", 10, y);
+      y += 6;
 
-      vendedores.forEach(v => {
-        const historico = JSON.parse(localStorage.getItem(`historico_${v.nome}`) || "[]");
-        historico.forEach(item => {
-          doc.text(item.data, 10, y);
-          doc.text(v.nome, 35, y);
-          doc.text(item.recebeu.toString(), 75, y);
-          doc.text(item.devolveu.toString(), 100, y);
-          doc.text(item.vendeu.toString(), 125, y);
-          doc.text(`R$ ${parseFloat(item.apurou).toFixed(2)}`, 150, y);
-          doc.text(`R$ ${parseFloat(item.pagou).toFixed(2)}`, 170, y);
-          doc.text(`R$ ${parseFloat(item.deve).toFixed(2)}`, 190, y);
-          y += 5;
-          if (y > 270) {
-            doc.addPage();
-            y = 20;
-          }
-        });
+      vendas.forEach(v => {
+        doc.text(
+          `${v.data} | ${v.vendedor} | ${v.vendeu} | ${parseFloat(v.apurou).toFixed(2)} | ${parseFloat(v.pagou).toFixed(2)} | ${parseFloat(v.deve).toFixed(2)}`,
+          10,
+          y
+        );
+        y += 6;
       });
 
       y += 10;
-      doc.text(`SALDO ANTERIOR: R$ ${totalReceitas.toFixed(2)}`, 10, y);
+      doc.setFontSize(14);
+      doc.text("RELATÓRIO DE DESPESAS", 10, y);
+      y += 8;
+
+      doc.setFontSize(10);
+      doc.text("Descrição | Valor", 10, y);
       y += 6;
-      doc.text(`TOTAL DESPESAS: R$ ${totalDespesas.toFixed(2)}`, 10, y);
+
+      despesas.forEach(d => {
+        doc.text(`${d.descricao} | R$ ${parseFloat(d.valor).toFixed(2)}`, 10, y);
+        y += 6;
+      });
+
+      y += 10;
+      doc.setFontSize(12);
+      doc.text(`TOTAL DAS RECEITAS (SALDO ANTERIOR): R$ ${totalReceitas.toFixed(2)}`, 10, y);
       y += 6;
-      doc.text(`TOTAL VENDAS (APUROU): R$ ${totalApurado.toFixed(2)}`, 10, y);
+      doc.text(`TOTAL DAS DESPESAS: R$ ${totalDespesas.toFixed(2)}`, 10, y);
       y += 6;
       doc.text(`TOTAL FINAL: R$ ${(totalReceitas + totalApurado - totalDespesas).toFixed(2)}`, 10, y);
-      y += 10;
-
-      doc.text("RELATÓRIO DE DESPESAS", 70, y);
-      y += 10;
-      doc.text("Descrição", 10, y);
-      doc.text("Valor", 120, y);
-      y += 5;
-      despesas.forEach(d => {
-        doc.text(d.descricao, 10, y);
-        doc.text(`R$ ${parseFloat(d.valor).toFixed(2)}`, 120, y);
-        y += 5;
-        if (y > 280) {
-          doc.addPage();
-          y = 20;
-        }
-      });
 
       doc.save("relatorio.pdf");
     }
   </script>
 </body>
-  </html>
+</html>
